--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dosis:wght@200&family=Lato:ital,wght@1,700&family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dosis:wght@200&family=Lato:ital,wght@1,700&family=Neucha&family=Open+Sans:wght@300&display=swap');
 
-body { 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dosis:wght@200&family=Hind:wght@300&family=Lato:ital,wght@1,700&family=Neucha&family=Open+Sans:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dosis:wght@200&family=Hind:wght@300&family=Lato:ital,wght@1,700&family=Neucha&family=Open+Sans:wght@300&display=swap');
+
+
+  body { 
   background-color: #ffc8dd;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Amatic SC', cursive;
+  font-size: 40px;
+  font-weight: bold;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -31,7 +38,7 @@ body {
   padding: 0;
   height: 150vh;
   width: 50vw;
-  gap: 0px;
+  gap: 5px;
   grid-template-rows: 5fr;
   grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
 }
@@ -41,26 +48,28 @@ body {
   width: 100vw;
   color: blueviolet;
   text-decoration: underline;
+  font-weight: bold;
   text-align: center;
-  font-size: 3rem;
+  font-size: 4rem;
   margin: 0px;
   padding:0px;
   display: block;
 }
 
-#h2 {
-  margin-top: 0;
-  display: block;
-  color:white;
-  text-decoration: underline;
-  font-size: 2rem;
-}
+#main-pic-With-text {
+    width: 450px;
+    height: 450px;
+    border-radius: 50%;
+    object-fit: cover; 
+  }
 
 .navigation {
+  font-family: 'Lato', sans-serif;
   list-style-type: none;
   margin: 0;
   padding: 0;
   text-align: center;
+  text-decoration: underline;
 }
 
 .navigation li {
@@ -89,20 +98,19 @@ body {
   padding:0;
   height: 5vh;
   width: 20vw;
-  background-color: #ff006e;
   color: #3a0ca3;
   border-style: line;
   border-color: white;
   font-stretch: expanded;
   font-weight: bold;
   text-align: center;
-  font-size: 32px;
+  font-size: 40px;
   text-decoration: underline;
   }
 
   .about-me {
-    margin: 0px;
-    padding:0px;
+    margin: 5px;
+    padding:5px;
     display:inline-flex;
     color: #f9f7f3;
   }
@@ -112,14 +120,13 @@ body {
     padding:0;
     height: 5vh;
     width: 20vw;
-    background-color: #ff006e;
     color: #3a0ca3;
     border-style: line;
     border-color: white;
     font-stretch: expanded;
     font-weight: bold;
     text-align: center;
-    font-size: 32px;
+    font-size: 50px;
     text-decoration: underline;
     }
  
@@ -133,15 +140,20 @@ body {
 #h5-title {
       height: 5vh;
       width: 28vw;
-      background-color: #ff006e;
       color: #3a0ca3;
       border-color: white;
-      font-stretch: expanded;
       font-weight: bold;
-      text-align: center;
-      font-size: 32px;
+      font-size: 40px;
       text-decoration: underline;
+      text-align: center;
       }
+
+#Visiting-Pisa {
+    width: 200px; /* Adjust the width and height according to your needs */
+    height: 200px;
+    border-radius: 50%; /* This creates a circular shape */
+    object-fit: cover; /* Maintains the aspect ratio of the image */
+  }    
 
 
 .socials {
